New subsystem was added

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -44,12 +44,11 @@
       </li>
       <li><a href="#mozTocId64443">Part 4. Common things</a>
         <ul>
-          <li><a href="#mozTocId278869">Chapter 1. Multimedia</a></li>
-          <li><a href="#mozTocId236677">Chapter 2. Interaction with operation
+          <li><a href="#mozTocId236677">Chapter 1. Interaction with operation
               system</a></li>
-          <li><a href="#mozTocId688163">Chapter 3. Filesystem</a></li>
-          <li><a href="#mozTocId853711">Chapter 4. Abnormal program termination</a></li>
-          <li><a href="#mozTocId656377">Chapter 5. Timer</a></li>
+          <li><a href="#mozTocId688163">Chapter 2. Filesystem</a></li>
+          <li><a href="#mozTocId853711">Chapter 3. Abnormal program termination</a></li>
+          <li><a href="#mozTocId656377">Chapter 4. Timer</a></li>
           <li><a href="#mozTocId381935">Chapter 5. Collision</a></li>
         </ul>
       </li>
@@ -67,7 +66,13 @@
           <li><a href="#mozTocId861609">Chapter 3. Game-pad</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId309127">Part 8. Internal details of the engine
+      <li><a href="#mozTocId189335">Part 8. Other important things</a>
+        <ul>
+          <li><a href="#mozTocId944718">Chapter 1. Memory</a></li>
+          <li><a href="#mozTocId180674">Chapter 2. Multimedia</a></li>
+        </ul>
+      </li>
+      <li><a href="#mozTocId309127">Part 9. Internal details of the engine
           subsystems</a>
         <ul>
           <li><a href="#mozTocId383177">Chapter 1. A few words for a curious
@@ -201,11 +206,11 @@
       <tbody>
         <tr>
           <td style="vertical-align: top;"><big>Operation system </big></td>
-          <td style="vertical-align: top;"><big>Windows 2000 or higher </big></td>
+          <td style="vertical-align: top;"><big>Windows XP or higher </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>Additional software </big></td>
-          <td style="vertical-align: top;"><big>DirectX 7.0 or higher </big></td>
+          <td style="vertical-align: top;"><big>DirectX 8.1 or higher </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>System type </big></td>
@@ -251,7 +256,6 @@ C++
     <ul>
       <li><a href="https://jmeubank.github.io/tdm-gcc/"><big>TDM-GCC</big></a></li>
       <li><a href="http://mingw-w64.org"><big>MINGW-w64</big></a></li>
-      <li><big>Visual C++ 2005</big></li>
       <li><big>Visual C++ 2008</big></li>
       <li><big>Visual C++ 2010</big></li>
       <li><big>Visual C++ 2012</big></li>
@@ -260,13 +264,8 @@ C++
       <li><big>Visual C++ 2017</big></li>
       <li><big>Visual C++ 2019</big></li>
     </ul>
-    <big><span style="text-decoration: underline;">Windows 2000 support</span><br>
-      <br>
-      You need <a href="http://download.microsoft.com/download/A/9/1/A91D6B2B-A798-47DF-9C7E-A97854B7DD18/VC.iso">Visual
-        C++ 2005 Express</a> and <a href="https://www.microsoft.com/en-us/download/details.aspx?id=15656">Windows
-        Server 2003 SP1 Platform SDK</a> for Windows 2000 support.<br>
-      <br>
-      <span style="text-decoration: underline;">Windows XP support</span><br>
+    <big><span style="text-decoration: underline;"></span> <span style="text-decoration: underline;">Windows
+        XP support</span><br>
       <br>
       &nbsp;You need Visual C++ 2008, MINGW-w64 or TDM-GCC for Windows XP
       support.<br>
@@ -508,7 +507,6 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
-
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -794,75 +792,8 @@ C++
       correct format. I recommend use <a href="https://www.gimp.org">GIMP</a>
       for do it. It is powerful open source and cross-platform image editor. </big>
     <h1><a class="mozTocH1" name="mozTocId64443"></a><big>Part 4. Common things</big></h1>
-    <h2><a id="mozTocId278869" class="mozTocH2"></a><big>Chapter 1. Multimedia</big></h2>
-    <big><br>
-      <span style="text-decoration: underline;">Improve you game</span><br>
-      <br>
-      What is good things for a video games? A sounds and video. The sound can
-      improve game atmosphere. The video is very useful as splash between game
-      levels. It can use for show game story.<br>
-      <br>
-      <span style="text-decoration: underline;">Supported formats</span><br>
-      <br>
-    </big>
-    <p><big> You can see list of supported formats bellow.</big></p>
-    <big><br>
-    </big>
-    <table style="text-align: left; width: 315px; height: 214px;" cellspacing="2"
-      cellpadding="2" border="1">
-      <tbody>
-        <tr>
-          <td style="vertical-align: top;"><big>Format </big></td>
-          <td style="vertical-align: top;"><big>Type </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>WAVE </big></td>
-          <td style="vertical-align: top;"><big>Audio </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>MPEG Audio Layer 3 </big></td>
-          <td style="vertical-align: top;"><big>Audio </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>Windows Media Audio </big></td>
-          <td style="vertical-align: top;"><big>Audio </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>MPEG–1 </big></td>
-          <td style="vertical-align: top;"><big>Video </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>MPEG–2 </big></td>
-          <td style="vertical-align: top;"><big>Video </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>Windows Media Video </big></td>
-          <td style="vertical-align: top;"><big>Video </big></td>
-        </tr>
-      </tbody>
-    </table>
-    <big><br style="text-decoration: underline;">
-      <span style="text-decoration: underline;">Additional formats</span><br>
-      <br>
-      You can use additional format if you install a third-party codecs.<br>
-      <br>
-      <span style="text-decoration: underline;">Working with multimedia</span><br>
-      <br>
-      Just use <span style="font-style: italic;">Multimedia</span> class for
-      work with multimedia. Let’s look on public methods.<br>
-      <br>
-      <span style="font-style: italic;">void Multimedia::initialize();</span> –
-      Initialize the multimedia subsystem.<br>
-      <span style="font-style: italic;">void Multimedia::load(const char
-        *target);</span> – Load a multimedia file.<br>
-      <span style="font-style: italic;">void Multimedia::play();</span> – Play a
-      content of the target file.<br>
-      <span style="font-style: italic;">void Multimedia::stop();</span> – Stop
-      playing a content of the target file.<br>
-      <span style="font-style: italic;">bool Multimedia::check_playing();</span>
-      – Return true if the multimedia resource is playing.</big><br>
-    <big> </big>
-    <h2><a class="mozTocH2" name="mozTocId236677"></a><big>Chapter 2.
+    <big></big> <big> </big>
+    <h2><a class="mozTocH2" name="mozTocId236677"></a><big>Chapter 1.
         Interaction with operation system</big></h2>
     <big><br>
       You may need interaction with operation system. Just use <span style="font-style: italic;">System</span>
@@ -885,7 +816,7 @@ C++
       This is all that you must know about this class. It is just very simple
       class for few important things.<br>
     </big>
-    <h2><a class="mozTocH2" name="mozTocId688163"></a><big>Chapter 3. Filesystem</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId688163"></a><big>Chapter 2. Filesystem</big></h2>
     <big><br>
       Filesystem subsystem let you doing some file operation. <span style="font-style: italic;">Filesystem</span>
       class provide simple access to this subsystem. Let’s look to public
@@ -898,7 +829,7 @@ C++
       <span style="font-style: italic;">bool Filesystem::get_status() const;</span>
       – Return false if last file operation was failed.<br>
     </big>
-    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 4. Abnormal
+    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 3. Abnormal
         program termination</big></h2>
     <big><br>
       You can use Halt function for terminate program. This function declared in
@@ -907,7 +838,7 @@ C++
       <span style="font-style: italic;">void EUGENEGDK::Halt(const char
         *message);</span> – Terminate the program. Write error message to log
       file if logging enabled. </big><big> </big>
-    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 5. Timer</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 4. Timer</big></h2>
     <big><br>
       Timer is very useful thing. Just use <span style="font-style: italic;">Timer</span>
       class for work with the timer. Let’s look to public methods.<br>
@@ -1533,8 +1464,103 @@ C++
       x-direction of specific stick.<br>
       <span style="font-style: italic;">GAMEPAD_DIRECTION
         Gamepad::get_stick_y(const GAMEPAD_STICKS stick);</span> – Return
-      y-direction of specific stick. </big>
-    <h1><a class="mozTocH1" name="mozTocId309127"></a><big>Part 8. Internal
+      y-direction of specific stick.<br>
+    </big>
+    <h1><a id="mozTocId189335" class="mozTocH1"></a><big>Part 8. Other important
+        things</big></h1>
+    <big></big>
+    <h2><a id="mozTocId944718" class="mozTocH2"></a><big>Chapter 1. Memory</big></h2>
+    <big><br>
+      RAM is very important resource. Just use <span style="font-style: italic;">Memory</span>
+      class for get total
+      memory size and free memory size. Let’s look to public methods.<br>
+      <br>
+      <span style="font-style: italic;">
+        unsigned long long int Memory::get_total_physical();</span> – Return
+      total physical memory size in bytes.<br>
+      <span style="font-style: italic;">
+        unsigned long long int Memory::get_free_physical();</span> – Return free
+      physical memory size in bytes.<br>
+      <span style="font-style: italic;">
+        unsigned long long int Memory::get_total_virtual();</span> – Return
+      total <a href="https://en.wikipedia.org/wiki/Virtual_memory">virtual
+        memory</a> size in bytes.<br>
+      <span style="font-style: italic;">
+        unsigned long long int Memory::get_free_virtual();</span> – Return free
+      <a href="https://en.wikipedia.org/wiki/Virtual_memory">virtual memory</a>
+      size in bytes.<br>
+      <span style="font-style: italic;">
+        unsigned long int Memory::get_usage();</span> – Return percentage of
+      physical memory usage.<br>
+    </big>
+    <h2><a id="mozTocId180674" class="mozTocH2"></a><big>Chapter 2. Multimedia</big></h2>
+    <big><br>
+      <span style="text-decoration: underline;">Improve you game</span><br>
+      <br>
+      What is good things for a video games? A sounds and video. The sound can
+      improve game atmosphere. The video is very useful as splash between game
+      levels. It can use for show game story.<br>
+      <br>
+      <span style="text-decoration: underline;">Supported formats</span><br>
+      <br>
+    </big>
+    <p><big> You can see list of supported formats bellow.</big></p>
+    <big><br>
+    </big>
+    <table style="text-align: left; width: 315px; height: 214px;" cellspacing="2"
+      cellpadding="2" border="1">
+      <tbody>
+        <tr>
+          <td style="vertical-align: top;"><big>Format </big></td>
+          <td style="vertical-align: top;"><big>Type </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>WAVE </big></td>
+          <td style="vertical-align: top;"><big>Audio </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>MPEG Audio Layer 3 </big></td>
+          <td style="vertical-align: top;"><big>Audio </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>Windows Media Audio </big></td>
+          <td style="vertical-align: top;"><big>Audio </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>MPEG–1 </big></td>
+          <td style="vertical-align: top;"><big>Video </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>MPEG–2 </big></td>
+          <td style="vertical-align: top;"><big>Video </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>Windows Media Video </big></td>
+          <td style="vertical-align: top;"><big>Video </big></td>
+        </tr>
+      </tbody>
+    </table>
+    <big><br style="text-decoration: underline;">
+      <span style="text-decoration: underline;">Additional formats</span><br>
+      <br>
+      You can use additional format if you install a third-party codecs.<br>
+      <br>
+      <span style="text-decoration: underline;">Working with multimedia</span><br>
+      <br>
+      Just use <span style="font-style: italic;">Multimedia</span> class for
+      work with multimedia. Let’s look on public methods.<br>
+      <br>
+      <span style="font-style: italic;">void Multimedia::initialize();</span> –
+      Initialize the multimedia subsystem.<br>
+      <span style="font-style: italic;">void Multimedia::load(const char
+        *target);</span> – Load a multimedia file.<br>
+      <span style="font-style: italic;">void Multimedia::play();</span> – Play a
+      content of the target file.<br>
+      <span style="font-style: italic;">void Multimedia::stop();</span> – Stop
+      playing a content of the target file.<br>
+      <span style="font-style: italic;">bool Multimedia::check_playing();</span>
+      – Return true if the multimedia resource is playing.</big><br>
+    <h1><a class="mozTocH1" name="mozTocId309127"></a><big>Part 9. Internal
         details of the engine subsystems</big></h1>
     <big> </big>
     <h2><a class="mozTocH2" name="mozTocId383177"></a><big>Chapter 1. A few
@@ -1664,6 +1690,7 @@ Multimedia
       1.4 – Sprite subsystem was improved.<br>
       1.4.1 – Text subsystem was improved.<br>
       1.4.2 –&nbsp; 1.4.5 – Small changes.<br>
+      1.4.6 – New subsystem was added. Windows 2000 support was removed.<br>
     </big> <big> </big>
   </body>
 </html>
