--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -677,9 +677,9 @@ C++
       method after load an image.</big><big> Always call <span style="font-style: italic;">set_kind</span>
       method after load sprite image. Always call <span style="font-style: italic;">set_frames</span>
       method before call <span style="font-style: italic;">set_kind</span>
-      method if you will use animated sprite. You can do all this step in one
-      action using <span style="font-style: italic;">load_sprite</span> method.
-      You can do it in one step using </big><big><span style="font-style: italic;">set_setting</span>
+      method if you will use animated sprite. </big><big>Also you can use <i>set_setting</i>
+      method instead calling <i>set_kind</i> method.</big><big> You can do all
+      this step in one action using <span style="font-style: italic;">load_sprite</span>
       method.</big>
     <h2><a class="mozTocH2" name="mozTocId367464"></a><big>Chapter 7. Text</big></h2>
     <big><br>
@@ -1695,6 +1695,7 @@ Multimedia
       1.4.6 – New subsystem was added. Windows 2000 support was removed.<br>
     </big><big>1.4.7 – 1.4.8 – Sprite subsystem was improved.<br>
       1.4.9 – Text subsystem was improved.<br>
+      1.5 – Small changes.<br>
     </big> <big> </big>
   </body>
 </html>
