Input was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -507,6 +507,7 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
+
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -1730,6 +1731,10 @@ Multimedia
         1.5 – Small changes.<br>
       </big><big> 1.5.1 – Optional software render was added.<br>
         1.5.2 – </big><big>1.5.7 –</big><big> Small changes.<br>
-      </big></span>
+      </big></span><span><big>1.5.8 – Keyboard input was improved.<br>
+      </big></span><span><big>1.5.9 – Mouse input was improved.<br>
+      </big></span><span><big>1.6 – Game-pad support was improved.<br>
+      </big></span><span><big> 1.6.1 – Small bug in game-pad subsystem was
+        fixed.</big></span><br>
   </body>
 </html>
