--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -328,7 +328,6 @@ C++
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
-
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -354,7 +353,6 @@ C++
       Clear the screen. Fill it by black color.<br>
       <span style="font-style: italic;">void Screen::initialize();</span> –
       Initialize the base graphic subsystem.<span style="font-style: italic;"></span><span
-
         style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -1735,6 +1733,7 @@ Multimedia
       </big></span><span><big>1.5.9 – Mouse input was improved.<br>
       </big></span><span><big>1.6 – Game-pad support was improved.<br>
       </big></span><span><big> 1.6.1 – Small bug in game-pad subsystem was
-        fixed.</big></span><br>
+        fixed.<br>
+      </big></span><span><big> 1.6.2 – Small changes.</big></span><br>
   </body>
 </html>
